@@ -31,6 +31,7 @@ import org.opensearch.gradle.info.BuildParams
 
 apply plugin: 'opensearch.build'
 apply plugin: 'opensearch.publish'
+apply from: "$rootDir/gradle/fips.gradle"
 
 dependencies {
   api project(":client:rest")
@@ -38,6 +39,7 @@ dependencies {
   api project(':libs:opensearch-nio')
   api project(":server")
   api project(":libs:opensearch-cli")
+  api project(":libs:opensearch-telemetry")
   api project(":test:telemetry")
   api "com.carrotsearch.randomizedtesting:randomizedtesting-runner:${versions.randomizedrunner}"
   api "junit:junit:${versions.junit}"
@@ -49,6 +51,12 @@ dependencies {
   api "org.mockito:mockito-core:${versions.mockito}"
   api "net.bytebuddy:byte-buddy:${versions.bytebuddy}"
   api "org.objenesis:objenesis:${versions.objenesis}"
+  fipsOnly "org.bouncycastle:bc-fips:${versions.bouncycastle_jce}"
+  fipsOnly "org.bouncycastle:bcpkix-fips:${versions.bouncycastle_pkix}"
+  fipsOnly "org.bouncycastle:bcutil-fips:${versions.bouncycastle_util}"
+
+  compileOnly project(":libs:agent-sm:bootstrap")
+  compileOnly "com.github.spotbugs:spotbugs-annotations:4.9.3"
 
   annotationProcessor "org.apache.logging.log4j:log4j-core:${versions.log4j}"
 }
@@ -94,9 +102,8 @@ test {
   systemProperty 'tests.gradle_wire_compat_versions', BuildParams.bwcVersions.wireCompatible.join(',')
   systemProperty 'tests.gradle_unreleased_versions', BuildParams.bwcVersions.unreleased.join(',')
 
-  if (BuildParams.runtimeJavaVersion >= JavaVersion.VERSION_18) {
-    jvmArgs += ["-Djava.security.manager=allow"]
-  }
+  dependsOn(project(':libs:agent-sm:agent').prepareAgent)
+  jvmArgs += ["-javaagent:" + project(':libs:agent-sm:agent').jar.archiveFile.get()]
 }
 
 tasks.register("integTest", Test) {
